fix overflow - styling

--- a/client/src/components/NavBar/styles.scss
+++ b/client/src/components/NavBar/styles.scss
@@ -11,6 +11,7 @@
     color: $font-color;
     font-family: $title-font;
     font-size: 1.2rem;
+    font-weight: bold;
   }
 
   ul {
@@ -23,8 +24,38 @@
     li {
       a {
         text-decoration: none;
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         color: $font-color;
+        font-weight: normal;
+      }
+    }
+  }
+}
+
+@include breakpoint-small {
+  .container-navbar {
+    padding: 0.7rem 2rem;
+
+    a {
+      font-size: 2rem;
+      font-weight: bold;
+      letter-spacing: 0.05rem;
+
+      &:hover {
+        font-size: 2.1rem;
+      }
+    }
+
+    ul {
+      gap: 1.5rem;
+
+      li {
+        a {
+          font-size: 1rem;
+          &:hover {
+            font-size: 1.2rem;
+          }
+        }
       }
     }
   }
