--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -16,14 +16,19 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: $bg-color;
-
   color: $font-color;
   font-family: "Manrope";
+  overflow: auto;
+  scrollbar-width: none;
 }
 
 .App {
-  width: 100%;
-  height: 100%;
+  height: 100vh;
+  background-image: url("../images/bgFaded.png");
+  background-size: 500px;
+  background-position: center;
+  overflow: auto;
+  scrollbar-width: none;
 }
 
 h1 {
